Fixing table alignment on last-child

--- a/app/assets/stylesheets/components/_form.css.sass
+++ b/app/assets/stylesheets/components/_form.css.sass
@@ -123,6 +123,8 @@ $form-offset: 11px
       margin-right: 90px
       &.search-options-on
         right: 44px
+  .result-list td:last-child
+    vertical-align: middle
 
 .editor
   .search-field
